Put `file-type` before `file-encoding` in the statusline

--- a/config.toml
+++ b/config.toml
@@ -10,4 +10,4 @@ display-inlay-hints = true
 
 [editor.statusline]
 left =  ["mode", "spinner", "file-name", "read-only-indicator", "file-modification-indicator"]
-right = ["version-control", "file-type", "diagnostics", "selections", "register", "position", "position-percentage", "file-encoding"]
+right = ["version-control", "diagnostics", "selections", "register", "position", "position-percentage", "file-type", "file-encoding"]
