Put `version-control` to the left part of the statusline

--- a/config.toml
+++ b/config.toml
@@ -9,5 +9,5 @@ display-messages = true
 display-inlay-hints = true 
 
 [editor.statusline]
-left =  ["mode", "spinner", "file-name", "read-only-indicator", "file-modification-indicator"]
-right = ["version-control", "diagnostics", "selections", "register", "position", "position-percentage", "file-type", "file-encoding"]
+left =  ["mode", "spinner", "file-name", "read-only-indicator", "file-modification-indicator", "version-control"]
+right = ["diagnostics", "selections", "register", "position", "position-percentage", "file-type", "file-encoding"]
