--- a/languages.toml
+++ b/languages.toml
@@ -54,6 +54,9 @@ plugins.pyls_mypy.live_mode = false
 plugins.isort.enabled = true
 plugins.rope_autoimport.enabled = true
 
+[language-server.rust-analyzer]
+command = "rustup"
+args = [ "run", "stable", "rust-analyzer" ]
 
 [language-server.rust-analyzer.config.rust-analyzer]
 check.command = "clippy" 
