--- a/languages.toml
+++ b/languages.toml
@@ -22,7 +22,7 @@ language-servers = [ "marksman", "dls" ]
 
 [[language]]
 name = "python"
-language-servers = [ "pylsp", "dls" ]
+language-servers = [ "pylsp", "pylyzer", "dls" ]
 
 [[language]]
 name = "rust"
@@ -49,10 +49,10 @@ lint = true
 plugins.black.enabled = true
 plugins.pylint.enabled = true
 plugins.pyflakes.enabled = false
-plugins.pyls_mypy.enabled = true
-plugins.pyls_mypy.live_mode = false
 plugins.isort.enabled = true
 plugins.rope_autoimport.enabled = true
+# plugins.pyls_mypy.enabled = true
+# plugins.pyls_mypy.live_mode = false
 
 
 [language-server.rust-analyzer.config.rust-analyzer]
