--- a/languages.toml
+++ b/languages.toml
@@ -52,7 +52,7 @@ plugins.black.enabled = true
 plugins.pylint.enabled = true
 plugins.pyflakes.enabled = false
 plugins.isort.enabled = true
-plugins.rope_autoimport.enabled = true
+# plugins.rope_autoimport.enabled = true
 
 
 [language-server.rust-analyzer.config.rust-analyzer]
