Rearrange status line

--- a/config.toml
+++ b/config.toml
@@ -10,8 +10,8 @@ display-messages = true
 display-inlay-hints = true 
 
 [editor.statusline]
-left =  ["mode", "spinner", "file-name", "read-only-indicator", "file-modification-indicator", "version-control"]
-right = ["diagnostics", "selections", "register", "position", "position-percentage", "file-type", "file-encoding"]
+left =  ["mode", "selections", "register", "spinner", "spacer", "file-name", "read-only-indicator", "file-modification-indicator", "version-control"]
+right = ["diagnostics", "position", "position-percentage", "file-type", "file-encoding"]
 
 [keys.normal]
 "esc" = ["keep_primary_selection", "collapse_selection"]
