--- a/config.toml
+++ b/config.toml
@@ -5,6 +5,16 @@ indent-guides.render = true
 line-number = "relative"
 soft-wrap.enable = true
 
+# Minimum severity to show a diagnostic after the end of a line:
+end-of-line-diagnostics = "hint"
+
+[editor.inline-diagnostics]
+# Minimum severity to show a diagnostic on the primary cursor's line.
+# Note that `cursor-line` diagnostics are hidden in insert mode.
+cursor-line = "error"
+# Minimum severity to show a diagnostic on other lines:
+# other-lines = "error"
+
 [editor.lsp]
 display-messages = true
 display-inlay-hints = true 
