--- a/config.toml
+++ b/config.toml
@@ -17,11 +17,28 @@ cursor-line = "error"
 
 [editor.lsp]
 display-messages = true
-display-inlay-hints = true 
+display-inlay-hints = true
 
 [editor.statusline]
-left =  ["mode", "selections", "register", "spinner", "spacer", "file-name", "read-only-indicator", "file-modification-indicator", "version-control"]
-right = ["diagnostics", "position", "position-percentage", "file-type", "file-encoding"]
+left = [
+  "mode",
+  "selections",
+  "spacer",
+  "file-name",
+  "read-only-indicator",
+  "file-modification-indicator",
+  "spacer",
+  "version-control",
+]
+right = [
+  "spinner",
+  "diagnostics",
+  "register",
+  "position",
+  "position-percentage",
+  "file-type",
+  "file-encoding",
+]
 
 [keys.normal]
 "esc" = ["keep_primary_selection", "collapse_selection"]
