--- a/config.toml
+++ b/config.toml
@@ -47,8 +47,9 @@ right = [
 t = ":format" # Format document
 
 [keys.insert]
+# Emacs style
 "A-b" = "move_prev_word_start"
-"A-f" = "move_next_word_start"
+"A-f" = "move_next_word_end"
 "C-b" = "move_char_left"
 "C-f" = "move_char_right"
 "C-a" = "goto_line_start"
